Add kernel support for netconsole

--- a/kernel-fragment.config
+++ b/kernel-fragment.config
@@ -105,3 +105,5 @@ CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_INTERVAL_TREE=y
 CONFIG_UCS2_STRING=y
+CONFIG_NETCONSOLE=y
+CONFIG_NETCONSOLE_DYNAMIC=y
